# parlant

./: .gitignore  README.md  pyproject.toml
parlant-data/: agents.json  chroma.sqlite3  evaluations.json  guidelines.json  sessions.json
