[project]
name = "parlant-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Surya",email = "rsurya@zeta.tech"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{ include = "base" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
