[project]
name = "parlant-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Surya",email = "rsurya@zeta.tech"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "parlant (>=1.6.7,<2.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry]
packages = [{ include = "base" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
